--- a/src/app/ship/ship-change-modules/ship-change-modules.component.html
+++ b/src/app/ship/ship-change-modules/ship-change-modules.component.html
@@ -1,9 +1,9 @@
 <app-ship-params [params]="spaceService.currentShip.getShipParams()"></app-ship-params>
 
 <div class="moduleTable">
-  <div *ngFor="let mRow of modules; let x = index">
-    <div *ngFor="let module of mRow; let y = index" (click)="setCoordsSection(x,y)">
-      <svg-icon [svgStyle]="{ 'width.px':96, 'height.px': 96 }" src="assets/svg/{{module.getImg()}}"></svg-icon>
+  <div class="module-rooms" *ngFor="let mRow of modules; let x = index">
+    <div class="module-room" *ngFor="let module of mRow; let y = index" (click)="setCoordsSection(x,y)">
+      <svg-icon *ngIf="module.getImg() != ''" [svgStyle]="{ 'width.px':96, 'height.px': 96 }" src="assets/svg/{{module.getImg()}}"></svg-icon>
     </div>
   </div>
 </div>
