--- a/src/app/ship/ship-change-modules/ship-change-modules.component.scss
+++ b/src/app/ship/ship-change-modules/ship-change-modules.component.scss
@@ -5,3 +5,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.module-room{
+  width: 96px;
+  height: 96px;
+  background-color: #b7b9c8;
+  border: 1px solid #6f7390;
+}
