--- a/src/app/shared/components/ship-params/ship-params.component.html
+++ b/src/app/shared/components/ship-params/ship-params.component.html
@@ -1,5 +1,7 @@
-<div class="list">
-  <div>{{params.distanse}}</div>
-  <div>{{params.energy}}</div>
-  <div>{{params.strength}}</div>
+<div class="params">
+  <div class="param__items">
+    <div>distanse: {{params.distanse}}</div>
+    <div>energy: {{params.energy}}</div>
+    <div>strength: {{params.strength}}</div>
+  </div>
 </div>
