--- a/src/app/shared/components/ship-params/ship-params.component.html
+++ b/src/app/shared/components/ship-params/ship-params.component.html
@@ -1,7 +1,16 @@
 <div class="params">
-  <div class="param__items">
-    <div>distanse: {{params.distanse}}</div>
-    <div>energy: {{params.energy}}</div>
-    <div>strength: {{params.strength}}</div>
+  <div class="param-items">
+    <div class="param-item">
+      <div class="param-item__name">distanse: </div>
+      <div class="param-item__value">{{params.distanse}} </div>
+    </div>
+    <div class="param-item">
+      <div class="param-item__name">energy: </div>
+      <div class="param-item__value">{{params.energy}} </div>
+    </div>
+    <div class="param-item">
+      <div class="param-item__name">strength: </div>
+      <div class="param-item__value">{{params.strength}} </div>
+    </div>
   </div>
 </div>
