add stars haven

--- a/src/app/ship/graf/graf.component.html
+++ b/src/app/ship/graf/graf.component.html
@@ -1,4 +1,4 @@
 <p>graf works!</p>
 
 
-<div id="cy"></div>
+<div id="cy" style="background-color: #1b1e36; background-image: url('https://i.ytimg.com/vi/UwtkNUhNWY4/maxresdefault.jpg')"></div>
