--- a/src/app/ship/graf/graf.component.scss
+++ b/src/app/ship/graf/graf.component.scss
@@ -1,6 +1,5 @@
 #cy {
-    width: 900px;
-    height: 900px;
+    width: 100%;
+    height: 100vh;
     display: block;
-    border: 1px solid red;
   }
