--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
+<div class="app-wrapper">
 
-<app-view-menu></app-view-menu>
-<router-outlet></router-outlet>
+  <div class="top-section">
+    <h1>19:00</h1>
+    <h2>1 January 2021</h2>
+  </div>
+
+  <div class="content-section">
+    <router-outlet></router-outlet>
+  </div>
+
+
+  <div class="bottom-section">
+    <app-tabs></app-tabs>
+  </div>
+
+<!--  <app-view-menu></app-view-menu>-->
+</div>
