--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~ngx-smart-modal/ngx-smart-modal.css";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons+Outlined";
 body {
   margin: 0;
 }
