--- a/src/app/ship/state/state.component.html
+++ b/src/app/ship/state/state.component.html
@@ -1,8 +1,2 @@
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
-<p>state works!</p>
+
+<button (click)="onClick($event)">open</button>
