--- a/src/app/shared/components/ship-params/ship-params.component.html
+++ b/src/app/shared/components/ship-params/ship-params.component.html
@@ -12,5 +12,9 @@
       <div class="param-item__name">strength: </div>
       <div class="param-item__value">{{params.strength}} </div>
     </div>
+    <div class="param-item">
+      <div class="param-item__name">shieldingField: </div>
+      <div class="param-item__value">{{params.shieldingField}} </div>
+    </div>
   </div>
 </div>
