--- a/src/app/shared/components/ship-params/ship-params.component.html
+++ b/src/app/shared/components/ship-params/ship-params.component.html
@@ -3,18 +3,25 @@
     <div class="param-item">
       <div class="param-item__name">distanse: </div>
       <div class="param-item__value">{{params.distanse}} </div>
+      <progressbar [value]="params.distanse"></progressbar>
     </div>
     <div class="param-item">
       <div class="param-item__name">energy: </div>
       <div class="param-item__value">{{params.energy}} </div>
+      <progressbar [value]="params.energy"></progressbar>
     </div>
     <div class="param-item">
       <div class="param-item__name">strength: </div>
       <div class="param-item__value">{{params.strength}} </div>
+      <progressbar [value]="params.strength"></progressbar>
     </div>
     <div class="param-item">
       <div class="param-item__name">shieldingField: </div>
       <div class="param-item__value">{{params.shieldingField}} </div>
+      <progressbar [value]="params.shieldingField"></progressbar>
     </div>
   </div>
 </div>
+
+
+
